--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "html2canvas": "^1.4.1",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
